# rover-archive

./: .gitignore  .gitmodules  11-rover-udev.rules  Jenkinsfile  README.md  arm  arm-upload  doxygen.dox  init.sh  initialize.sh  pylint.cfg  robotrc  setup.sh  topics
Arduino/: CMakeLists.txt  PID_v1  README.md  RS232-router-test  arm  common  drive  power  src
Arduino/RS232-router-test/: CMakeLists.txt  main.cpp  main.h
Arduino/cmake/: ArduinoToolchain.cmake
arduino/: CMakeLists.txt
catkin_ws/src/ahrs/: CMakeLists.txt  README.md  ahrs.rviz  package.xml
catkin_ws/src/ahrs/launch/: ahrs.launch
catkin_ws/src/ahrs/libraries/: CMakeLists.txt
catkin_ws/src/ahrs/msg/: AhrsStatusMessage.msg  AhrsStdMsg.msg  Ig500nGPS.msg
catkin_ws/src/ahrs/src/: ahrs_node.cpp  tf_broadcaster.cpp  tf_broadcaster.py
catkin_ws/src/ahrs/srv/: CenterWorldFrame.srv
catkin_ws/src/ahrs/test/: ahrs_unit_test.cpp
catkin_ws/src/ahrs/vendors/: CMakeLists.txt
catkin_ws/src/arduino/: CMakeLists.txt  package.xml
catkin_ws/src/arduino/PID_v1/: CMakeLists.txt
catkin_ws/src/arduino/RS232-router-test/: CMakeLists.txt  CustomSerial.cpp  CustomSerial.h  main.cpp
catkin_ws/src/arduino/arm/: CMakeLists.txt  Encoder.cpp  Encoder.h  Motor.cpp  Motor.h  PitchRollCompute.cpp  PitchRollCompute.h  arm.cpp  arm.h  main.cpp  pins_arm.h
catkin_ws/src/arduino/common/: ram.cpp  ram.h
catkin_ws/src/arduino/drive/: CMakeLists.txt  SteeringWheel.cpp  SteeringWheel.h  TODO  Wheel.cpp  Wheel.h  main.cpp  pins.h
catkin_ws/src/arduino/launch/: arduino.launch  arm.launch  drive.launch  pid_test.launch  science.launch
catkin_ws/src/arduino/msg/: LimitSwitchClaw.msg  LimitSwitchScience.msg
catkin_ws/src/arduino/scripts/: reset_arduino.py
catkin_ws/src/arduino/src/: CMakeLists.txt  doxygen.dox
catkin_ws/src/arduino/srv/: drill.srv  sensor.srv
catkin_ws/src/arduino_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/arduino_msgs/srv/: Ram.srv
catkin_ws/src/arm_control/: CMakeLists.txt  README.md  luaarm.txt  package.xml
catkin_ws/src/arm_control/config/: controllers.yaml  joint_limits.yaml  ompl_planning.yaml
catkin_ws/src/arm_control/launch/: moveit.launch  moveit.launch_2Feb  tiva_topic_remap.launch
catkin_ws/src/arm_control/meshes/: arm_base.STL  diff1.STL  finger1.STL
catkin_ws/src/arm_control/msg/: ControlMode.msg  EncoderPosition.msg  JointVelocities.msg
catkin_ws/src/arm_control/scripts/: firmware_remap.py  joints_as.py  joystick_arm.py  tf_broadcaster.py  tr_boradcaster.py
catkin_ws/src/arm_control/src/: arm_control.py  armikp.py  test.py  tf_test.py
catkin_ws/src/arm_control/urdf/: arm.urdf
catkin_ws/src/arm_gazebo/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/arm_gazebo/launch/: arm.launch
catkin_ws/src/arm_gazebo/worlds/: arm.world
catkin_ws/src/arm_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
catkin_ws/src/arm_moveit/config/: arm_description.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
catkin_ws/src/arm_moveit/launch/: arm_description_moveit_controller_manager.launch.xml  controllers.launch  demo.launch  move_group.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
catkin_ws/src/arm_moveit/src/: joints_as.py
catkin_ws/src/arm_ros_control/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/arm_ros_control/config/: arm_ros_control.yaml
catkin_ws/src/arm_ros_control/launch/: arm_ros_control.launch
catkin_ws/src/arm_simulation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/arm_simulation/launch/: arm.launch  gazebo.launch
catkin_ws/src/arm_simulation/plugins/: arm_control_plugin.cc
catkin_ws/src/arm_simulation/src/: joint_states_dispatcher.cpp
catkin_ws/src/arm_tiva/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/arm_tiva/drive_encoder/: CMakeLists.txt  drive_encoder.cpp
catkin_ws/src/arm_tiva/drive_encoder_left/: CMakeLists.txt  drive_encoder_left.cpp
catkin_ws/src/arm_tiva/drive_encoder_right/: CMakeLists.txt
catkin_ws/src/arm_tiva/encoder/: CMakeLists.txt  encoder.cpp
catkin_ws/src/arm_tiva/encoder_cui/: CMakeLists.txt  encoder_cui.cpp
catkin_ws/src/arm_tiva/encoder_magnetic/: CMakeLists.txt  encoder_magnetic.cpp
catkin_ws/src/arm_tiva/launch/: drive_encoder.launch  encoder.launch  encoder_cui.launch  encoder_magnetic.launch
catkin_ws/src/arm_tiva/motor/: CMakeLists.txt  motor.cpp
catkin_ws/src/arm_tiva/motor_control/: CMakeLists.txt
catkin_ws/src/claraty_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/claraty_msgs/action/: AcquireImage.action  MoveArc.action  MoveTo.action
catkin_ws/src/claraty_msgs/msg/: Arc.msg  ArcArray.msg  ArcStamped.msg  FloatGrid.msg  Goodness.msg  LocomotorState.msg
catkin_ws/src/claraty_msgs/srv/: XyzToMastAzel.srv
catkin_ws/src/drive_control/: CMakeLists.txt  package.xml
catkin_ws/src/drive_control/launch/: drive_control.launch  serial.launch
catkin_ws/src/drive_control/msg/: DriveCommand.msg  WheelCommand.msg
catkin_ws/src/hci/: ArmGui.ui  CMakeLists.txt  MainWindow_V4.ui  README.md  package.xml
catkin_ws/src/hci/config/: camera_topics.yaml  duo_profile.yaml  joystick_profile.yaml  logitech_profile.yaml
catkin_ws/src/hci/launch/: duo.launch  hci.launch  logitech.launch
catkin_ws/src/hci/src/: ScienceController.py  arm.py  arm_gui.py  arm_publisher.py  drive_publisher.py  hci.py  joystick_controller.py  joystick_profile.py  map_controller.py  pan_tilt_controller.py  rover_window.py  sensor_popup.py  tr_boradcaster.py  utilities.py
catkin_ws/src/hci_cpp/: CMakeLists.txt  package.xml
catkin_ws/src/hci_cpp/cmake-modules/: Findrimstreamer.cmake
catkin_ws/src/hci_cpp/src/: CMakeLists.txt
catkin_ws/src/lidar/: CMakeLists.txt  lidar.rviz  lidar_pcd_converter.cpp  package.xml
catkin_ws/src/lidar_description/: CMakeLists.txt  README.md  lidar.rviz  package.xml
catkin_ws/src/lidar_gazebo/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/odometry/: CMakeLists.txt  README.md  odometry.rviz  package.xml
(+501 files in other folders)
