<?xml version="1.0"?>
<package>
  <name>arduino</name>
  <version>0.0.1</version>
  <description>Package containing the code for the drive Arduino</description>

  <maintainer email="adrien.sauvestre@mail.mcgill.ca">Adrien Sauvestre</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ahrs</build_depend>
  <build_depend>arduino_msgs</build_depend>
  <build_depend>drive_control</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rover_common</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>ahrs</run_depend>
  <run_depend>drive_control</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
