<?xml version="1.0"?>
<package>
  <name>arduino_msgs</name>
  <version>0.0.1</version>
  <description>Package containing the messages used by arduino</description>

  <maintainer email="adrien.sauvestre@mail.mcgill.ca">Adrien Sauvestre</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
