<?xml version="1.0"?>
<package>
  <name>arm_ros_control</name>
  <version>0.0.1</version>
  <description>Configs and launch files for ros_control testing.</description>

  <maintainer email="malcolm.watt@mail.mcgill.ca">Malcolm Watt</maintainer>
  <author email="adrien.sauvestre@mail.mcgill.ca">Adrien Sauvestre</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>controller_interface</build_depend>

  <!-- ros_control -->
  <build_depend>controller_manager</build_depend>

  <!-- ros_controllers -->
  <build_depend>joint_state_controller</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>rqt_joint_trajectory_controller</build_depend>

  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>controller_interface</run_depend>

  <!-- ros_control -->
  <run_depend>controller_manager</run_depend>

  <!-- ros_controllers -->
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>rqt_joint_trajectory_controller</run_depend>

</package>
