<?xml version="1.0"?>
<package>
  <name>arm_simulation</name>
  <version>0.0.1</version>
  <description>Package containing the controllers and gazebo files necessary to simulate the arm</description>

  <maintainer email="adrien.sauvestre@mail.mcgill.ca">Adrien Sauvestre</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- ros_control -->
  <build_depend>controller_manager</build_depend>

  <!-- ros_controllers -->
  <build_depend>effort_controllers</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>rqt_joint_trajectory_controller</build_depend>
  <build_depend>pid</build_depend>

  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>controller_interface</run_depend>

  <!-- ros_control -->
  <run_depend>controller_manager</run_depend>

  <!-- ros_controllers -->
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>rqt_joint_trajectory_controller</run_depend>
  <run_depend>pid</run_depend>
</package>
