<?xml version="1.0"?>
<package>
  <name>arm_simulation</name>
  <version>0.0.1</version>
  <description>Package containing the controllers and gazebo files necessary to simulate the arm</description>

  <maintainer email="adrien.sauvestre@mail.mcgill.ca">Adrien Sauvestre</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>pid</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>pid</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
