<?xml version="1.0"?>
<package>
  <name>arm_tiva</name>
  <version>0.0.1</version>
  <description>TivaC code for publishing encoder data, receiving motor commands, controlling motors.</description>

  <maintainer email="jake.macneal@gmail.com">jake</maintainer>

  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosserial_client</build_depend>
  <build_depend>rosserial_tivac</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ros_lib</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>tivac_hardware</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_tivac</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ros_lib</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
