<?xml version="1.0"?>
<package>
  <name>drive_control</name>
  <version>0.1.0</version>
  <description>The drive_control package maps a desired general vehicle linear and angular velocity
  to velocity and angles of individual wheels on the 6 wheeled rover. </description>

  <maintainer email="david.lavoie-boutin@mail.mcgill.ca">David Lavoie-Boutin</maintainer>

  <license>GPLv2</license>


  <url type="website">http://github.com/mcgill-robotics/rover.git</url>

  <author email="david.lavoie-boutin@mail.mcgill.ca">David Lavoie-Boutin</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>