<?xml version="1.0"?>
<package>
  <name>hci</name>
  <version>0.2.0</version>
  <description>Human Computer Interaction (hci) package contains gui tools to drive the rover around.</description>
  
  <maintainer email="david.lavoie-boutin@mail.mcgill.ca">David Lavoie-Boutin</maintainer>
  <license>GPLv2</license>
  <url type="website">http://github.com/mcgill-robotics/rover.git</url>
  <author email="david.lavoie-boutin@mail.mcgill.ca">David Lavoie-Boutin</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ahrs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <!-- <build_depend>rover_msgs</build_depend> -->
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <run_depend>ahrs</run_depend> -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rover_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>